fixed the spacing and layout

--- a/index.css
+++ b/index.css
@@ -7,28 +7,24 @@
 
 body{
     margin: 1rem;
-    max-width: 100vw; 
     font-family: var(--body-font); 
     background-color: var(--webpage-background);
 }
 
 .body-container {
     display: flex;
-    justify-content: flex-start; 
-    align-items: flex-start; 
-    width: fit-content; 
-    height: fit-content; 
-    /* padding: 10px; Optional: Adds some padding around the containers */
+    height: 100%; 
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem; 
 }
 
 .header-container {
-    /* max-width: 30vw;  */
-    display: flex;
-    flex: 1; 
+    display: flex; 
     flex-direction:column; 
-    gap:1rem; 
     align-items: left; 
-    /* padding: 0.5rem;  */
 }
 
 .header-container h1 {
@@ -47,12 +43,7 @@ body{
 }
 
 .d3-container{
-    flex: 2; 
-    /* width: 60vw; 
-    height: 200vh;   */
-    /* padding: 0.5rem;  */
-    width: 105vw; 
-    height: 100vh; 
+    height: 90vh; 
 }
 
 @font-face {
